--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,32 @@
             "homepage": "https://github.com/sonata-project/SonataDoctrinePHPCRAdminBundle/contributors"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/BlNARYFOUR/resource.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/BlNARYFOUR/resource-bundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/BlNARYFOUR/resource-rest-bundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/BlNARYFOUR/tree-browser-bundle.git"
+        }
+    ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "doctrine/phpcr-bundle": "^1.3 || ^2.0",
         "doctrine/phpcr-odm": "^1.5.2 || ^2.0",
         "sonata-project/admin-bundle": "^3.61",
         "sonata-project/block-bundle": "^3.18.3",
-        "symfony-cmf/resource-rest-bundle": "^1.0.1",
-        "symfony-cmf/tree-browser-bundle": "^2.0",
+        "symfony-cmf/resource-rest-bundle": "^2.0.0",
+        "symfony-cmf/tree-browser-bundle": "^3.0",
         "symfony/config": "^3.4.36 || ^4.4",
         "symfony/dependency-injection": "^3.4.36 || ^4.4",
         "symfony/finder": "^3.4.36 || ^4.4",
@@ -56,10 +74,10 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "phpcr/phpcr": "^2.1",
         "phpcr/phpcr-utils": "^1.4.0",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpunit/phpunit": "^9.5",
-        "sonata-project/core-bundle": "^3.14",
-        "symfony-cmf/resource": "^1.0",
-        "symfony-cmf/resource-bundle": "^1.0",
+        "symfony-cmf/resource": "^2.0",
+        "symfony-cmf/resource-bundle": "^2.0",
         "symfony-cmf/testing": "^3.0.0",
         "symfony/css-selector": "^3.4.22 || ^4.4 || ^5.3",
         "symfony/doctrine-bridge": "^3.4.22 || ^4.4 || ^5.3",
